Bug 693636 - Antialiasing options are ignored in windows printer driver
Summary: Antialiasing options are ignored in windows printer driver
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: master
Hardware: PC Windows 8
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-13 11:27 UTC by Stanislav Kuzmin
Modified: 2023-05-10 12:05 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
antialiasing.zip (1.05 KB, patch)
2013-02-13 11:28 UTC, Stanislav Kuzmin
Details | Diff
antialiasing.patch (612 bytes, patch)
2013-02-13 11:30 UTC, Stanislav Kuzmin
Details | Diff
setup.ps (608 bytes, application/postscript)
2013-02-13 11:31 UTC, Stanislav Kuzmin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Kuzmin 2013-02-13 11:27:50 UTC
When printing with mswinpr2 output device  - no antialiasing (graphics or text) are working.

Command line:  gswin32c -dNOPAUSE -dBATCH setup.ps test.pdf

Contents of setup.ps file and my solution patch for gdevwpr2.c see in attachments.
Comment 1 Stanislav Kuzmin 2013-02-13 11:28:43 UTC
Created attachment 9278 [details]
antialiasing.zip
Comment 2 Stanislav Kuzmin 2013-02-13 11:30:45 UTC
Created attachment 9279 [details]
antialiasing.patch
Comment 3 Stanislav Kuzmin 2013-02-13 11:31:13 UTC
Created attachment 9280 [details]
setup.ps
Comment 4 Ken Sharp 2023-05-10 12:05:00 UTC
Enhancement committed in 9598c88c8fbb117019dffc1e88e526dbe1559daf

This works with -dTextAlphaBits and -dGraphicsAlphaBits as well as sending the parameters via putdeviceprops. It also works for depths other than 24 which the original patch did not, and uses the colour depth to limit the maximum number of bits.